# diffusiontraj

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
conda_env/: gen_pip_req.ipynb  install_ogb.sh  install_pre.sh  ogb_dset_download.ipynb  requirements.txt
conda_env/d4rl/: README.md  extra_requirements.txt  pip_extra_req.sh  req_mujoco.sh  requirements.txt
configs/experiment/maze2d/: README.md  (+7 more)
configs/maze2d/: README.md  maze2d_large_baseline_config.py  maze2d_large_trajectory_stitching_config.py  maze2d_medium_baseline_config.py  maze2d_medium_trajectory_stitching_config.py  maze2d_umaze_baseline_config.py  maze2d_umaze_baseline_smoke_config.py  maze2d_umaze_trajectory_stitching_config.py
data/eval_problems/: maze2d_lg_ev_prob_bt2way_nppp3_rprange02.hdf5
data/m2d/: maze2d-large-sparse-v1-smoke.hdf5  maze2d-medium-sparse-v1-smoke.hdf5  maze2d-umaze-sparse-v1-luotest.hdf5
scripts/: generate_maze2d_problem_sets.py  plan_maze_baseline.py  plan_maze_baseline.sh  plan_trajectory_stitching.py  plan_trajectory_stitching.sh  train_maze_baseline.py  train_maze_baseline.sh  train_trajectory_stitching.py  train_trajectory_stitching.sh
scripts/eval_problems/: generate_maze2d_eval_problems.py  generate_maze2d_eval_problems.sh  generate_maze2d_eval_problems.yaml  generate_maze2d_problem_sets.py  maze2d_eval_problem_utils.py  maze2d_problem_utils.py
src/comp_diffuser/: types.py
tests/: test_checkpoint_selection.py  test_class_naming_cleanup.py  test_maze2d_dataset.py  test_maze2d_smoke.py  test_planning_config_schema.py
(+93 files in other folders)
